<resources>
    <string name="app_name">Books for sure</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_edit__profile">Books for Sure</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="a"><u>Discounts For SSLC</u></string>
    <string name="b"><u>For PUC</u></string>
    <string name="c"><u>For Engineering</u></string>
    <string name="d"><u>For Health Science</u></string>
    <string name="e"><u>For Stationary</u></string>
    <string name="f"><u>For Dental Equipement</u></string>
    <string name="g"><u>For Second Hand Text Book</u></string>
    <string name="degree"><u>For Degree</u></string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_welcome">Welcome</string>


    <string name="slide_2_line1">1) You Can Now Order Brand New/Used Text Books, Note books, Novels, Stationary Items, Educational
Instruments/Equipments, Office Supplies At Your Finger Tips!</string>

    <string name="slide_2_line2">2) For All U.G And P.G Courses</string>

    <string name="slide_2_line3">Including: B.E, Diploma, B.Sc, Medical, Dental, LLB, M.Sc,  M.Tech etc.</string>

    <string name="slide_2_line4">Commerce Courses Including  B.A, B.Com, BBM, BBA,  B.Ed, M.Com, M.B.A, C.A, etc.</string>

    <string name="slide_2_line5">All Schools And Pre-University Books .</string>

    <string name="slide_2_line6">Guides, Scanners , Aptitude And Competitive Books Also Available For All The Above Courses.</string>

    <string name="slide_3_line1">1) To Place An Order Either Write Down Your Oder On A Piece Of Paper And Upload It On The App,

Or Just Simply Fill In Your Order Via Text By Clicking On The Plus Icon.</string>

    <string name="slide_3_line2">2) A Quick Confirmation Call/Sms Will Be Made To You Once Your Oder Has Been Placed, The Price Of

The Order Including The Delivery Charges Will Be Confirmed With You Then.</string>

    <string name="slide_3_line3">3) All The Items Will Be Available For A Discounted Price.</string>

    <string name="slide_3_line4">4)  No Minimum Order</string>

    <string name="slide_3_line5">5) Live Order Tracking</string>

    <string name="slide_3_line6">6) Cash On Delivery.</string>

    <string name="address">Address : 68/1 Concord Plaza Ground Floor, Coles Road, Frazer Town. Bangalore 560005</string>

    <string name="numbers">Phone numbers : +91-9916371851 , +91-9740423402 , +91-8951881200</string>


</resources>
