<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="booksforsure1.galaxyworks.com.galaxyworks.Welcome_slide_2">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/app_logo_background"
        android:alpha="0.1"
        android:scaleType="fitCenter"
        android:background="#ffffff"/>

    <!--TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Books For Sure"
        android:textColor="@color/textColor1"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/-->


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide_2_line1"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide_2_line2"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide_2_line3"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide_2_line4"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide_2_line5"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16sp"
        android:text="@string/slide_2_line6"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="3) Customer can provide us the optional ISBN number of the book(s) aswell for us to provide better quality service"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="slide ->"
            android:textColor="@color/textColor1"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/textView2"
            android:layout_gravity="right|bottom" />


    </LinearLayout>


    </android.support.v4.widget.NestedScrollView>




</FrameLayout>
