<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="booksforsure.galaxyworks.com.galaxyworks.Welcome_slide_3">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/app_logo_background"
        android:alpha="0.1"
        android:scaleType="fitCenter"/>

        <!--TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Books For Sure"
            android:textColor="@color/textColor1"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="40dp"/-->



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounts on guides 30%"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounts on text books  10%-40%"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounts on guides 30%"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounts on text books  10%-40%"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounts on scanners"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounts on text books  10%-40%"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounts on scanners : 30% off on MRP"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounts on text books : 15%-25%"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounts on Text Books  10%-40%"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounted price available on every item including classmate notebooks."
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/f"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounted price available on every item."
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/g"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounted price available on every book. 10% - 70%"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Discounts available for school, Competitive and aptitude books also."
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*Discounts may vary upon the book/order and the demand of the book/order at a given time* "
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*All discounts for both 1st and 2nd hand books will be on MRP* "
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Happy Ordering !"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"/>




        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Lets Get Started!"
            android:background="@color/colorPrimaryDark"
            android:elevation="3dp"/>


    </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
